# WebStudio

./: .editorconfig  .env  .env.baps  .env.baps-development  .env.baps-production  .env.development  .env.prod  .env.production  .gitignore  Jenkinsfile  README.md  WebStudio.code-workspace  go.mod  go.sum  multiserver.py  package.json  pyproject.toml  requirements.ci.txt  requirements.txt  server.py  serverconfig.ini.example  shittyserver.ini.example  shittyserver.py  stateserver.py  tsconfig.json
.github/workflows/: main.yml
client/: .env.production  .gitignore  package.json  tsconfig.json
client/config/: webpack.config.js
client/public/: index.html  manifest.json
client/src/: App.scss  App.tsx  react-app-env.d.ts  rootReducer.ts  worklet.d.ts
common/: package.json  tsconfig.json  tsconfig.tsbuildinfo
common/src/: index.js  index.tsx
config/: env.js  webpack.config.js  webpackDevServer.config.js
doc/: multistudio-protocol.md
multistudio/: .env  .eslintcache  package.json
multistudio/public/: index.html  manifest.json
multistudio/src/: App.scss  App.tsx  index.tsx  rootReducer.ts  store.ts
neoserver/: client_connection.go  jack_sink.go  neoserver.go  opus_decoder.go
neoserver/config/: config.go
public/: index.html  manifest.json
public/lib/: libshine.js
scripts/: build.js  start.js  trace-memory-leak.ts
src/: App.css  App.scss  App.tsx  api.ts  bapsicle.ts  index.css  index.tsx  light-theme.scss  react-app-env.d.ts  rootReducer.ts  serviceWorkerLoader.ts  store.ts  utils.ts  wavesurfer-plugins.d.ts  worker.d.ts  worklet.d.ts
(+103 files in other folders)
